--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "homepage": "https://github.com/Klaney/wdipingpong#readme",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-ejs-layouts": "^2.0.0",
     "express-session": "^1.12.1",
+    "pg": "^4.4.3",
+    "pg-hstore": "^2.3.2",
     "request": "^2.65.0",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "sequelize": "^3.13.0"
   }
 }
