--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.65.0",
     "require": "^2.4.20",
-    "sequelize": "^3.13.0"
+    "sequelize": "^3.13.0",
+    "socket.io": "^1.3.7"
   }
 }
