--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "request": "^2.65.0",
     "require": "^2.4.20",
     "sequelize": "^3.13.0",
+    "sequelize-cli": "^2.1.0",
     "socket.io": "^1.3.7"
   }
 }
